# web_scraper

./: README.md  new_file.html  pyproject.toml
tests/: test_scraper.py
web_scraper/: scraper.py
